Fix sidepreopen-control z-index

--- a/scss/moove/_blocks.scss
+++ b/scss/moove/_blocks.scss
@@ -37,6 +37,7 @@
     font-size: 20px;
     padding: 8px 0 0 4px;
     cursor: pointer;
+    z-index: 999;
 
     &:before {
         font-family: 'simple-line-icons';
